--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "tailwindcss": "^4.1.10"
+  },
+  "devDependencies": {
+    "imagemin-cli": "^8.0.0",
+    "imagemin-webp": "^8.0.0"
   }
 }
